fix(Collapses.js): 4x Collapse créér, et props précisé, fonctionnel

--- a/src/styles/Collapse.scss
+++ b/src/styles/Collapse.scss
@@ -1,4 +1,4 @@
-section {
+div {
     .collapse-head {
         background-color: red;
         display: flex;
